...
              component={SubscriptionsScreen}
              options={{ headerShown: true, title: '', headerBackTitle: '' }}
            />
            <Stack.Screen
              name="RoamingPlans"
              component={RoamingPlansScreen}
              options={{ headerShown: true, title: 'Available Plans', headerBackTitle: '' }}
            />
            <Stack.Screen
              name="DeviceCalendar"
              component={DeviceCalendarScreen}
              options={{ headerShown: true, title: 'Calendars', headerBackTitle: '' }}
            />
...
